# ray-tracing-engine

./: .gitignore  CMakeLists.txt  README.md
build_web/: .ninja_deps  .ninja_log  CMakeCache.txt  PathTracingRenderer.html  PathTracingRenderer.js  PathTracingRenderer.wasm  build.ninja  cmake_install.cmake  server.py
src/: Main.cpp
src/core/: Matrix4x4.cpp  Matrix4x4.h  Random.cpp  Random.h  Ray.cpp  Ray.h  Transform.cpp  Transform.h  Vec3.cpp  Vec3.h
src/geometry/: AABB.h  BVH.cpp  BVH.h  BVHNode.h  Box.cpp  Box.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Hittable.h  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Transform.cpp  Transform.h  Triangle.cpp  Triangle.h
src/materials/: Dielectric.cpp  Dielectric.h  Emissive.cpp  Emissive.h  Lambertian.cpp  Lambertian.h  Material.h  Metal.cpp  Metal.h
src/renderer/: Integrator.cpp  Integrator.h  Renderer.cpp  Renderer.h  Sampler.cpp  Sampler.h
src/scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h
src/utils/: Config.cpp  Config.h  Image.cpp  Image.h  ImageWriter.cpp  ImageWriter.h  ProgressReporter.cpp  ProgressReporter.h  ThreadPool.h
web/: index.html
